2012-07-17  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Cleanup and multiple fixes in CMS_2011_S9120041

2012-08-09  Andy Buckley  <andy.buckley@cern.ch>

	* Fixing aida2root command-line help message and converting to TH*
	rather than TGraph by default.

2012-07-24  Andy Buckley  <andy.buckley@cern.ch>

	* Improvements/migrations to rivet-mkhtml, rivet-mkanalysis, and
	rivet-buildplugin.

2012-07-17  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Add CMS_2012_I1087342

2012-07-12  Andy Buckley  <andy.buckley@cern.ch>

	* Fix rivet-mkanalysis a bit for YODA compatibility.

2012-07-05  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Version 1.8.1!

2012-07-05  Holger Schulz  <holger.schulz@physik.hu-berlin.de>

	* Add ATLAS_2011_I945498

2012-07-03  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Bugfix for transverse mass (thanks to Gavin Hesketh)

2012-06-29  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Merge YODA branch into trunk. YODA is alive!!!!!!

2012-06-26  Holger Schulz  <holger.schulz@physik.hu-berlin.de>

	* Add ATLAS_2012_I1091481

2012-06-20  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added D0_2011_I895662: 3-jet mass

2012-04-24  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* fixed a few bugs in rivet-rmgaps

	* Added new TOTEM dN/deta analysis

2012-03-19  Andy Buckley  <andy.buckley@cern.ch>

	* Version 1.8.0!

	* src/Projections/UnstableFinalState.cc: Fix compiler warning.

	* Version bump for testing: 1.8.0beta1.

	* src/Core/AnalysisInfo.cc: Add printout of YAML parser exception error messages to aid debugging.

	* bin/Makefile.am: Attempt to fix rivet-nopy build on SLC5.

	* src/Analyses/LHCB_2010_S8758301.cc: Add two missing entries to the PDGID -> lifetime map.

	* src/Projections/UnstableFinalState.cc: Extend list of vetoed particles to include reggeons.

2012-03-16  Andy Buckley  <andy.buckley@cern.ch>

	* Version change to 1.8.0beta0 -- nearly ready for long-awaited release!

	* pyext/setup.py.in: Adding handling for the YAML library: fix for